--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -94,12 +94,12 @@
                     <div class="card-header"><h5 class="card-title">Flip a Coin</h5></div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm col-lg-3">
+                            <div class="col col-lg-3">
                                 <form method="GET" action="/flip">
-                                    <button class="decide" name="flip" type="button">Flip the Coin</button>
+                                    <button class="decide" name="flip" type="button">Decide</button>
                                 </form>
                             </div>
-                            <div class="col-sm col-lg-9 answer"> <span class="value"> </span> </div>
+                            <div class="col col-lg-9 answer"> <span class="value"> </span> </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
@@ -116,13 +116,13 @@
                 <div id="dice" class="card">
                     <div class="card-header"><h5 class="card-title">Roll the Dice</h5></div> <div class="card-body">
                         <div class="row">
-                            <div class="col-sm col-lg-3">
+                            <div class="col col-lg-3">
                             <form method="GET" action="/roll">
                                 <label for="expr">Dice Expression:</label> <input id="expr" name="expr" type="text" width="100" value="1d6"/>
                                 <button class="decide" name="roll" type="button">Roll</button>
                             </form>
                             </div>
-                            <div class="col-sm col-lg-9 answer">Value: <span class="value"> </span><br />
+                            <div class="col col-lg-9 answer">Value: <span class="value"> </span><br />
                                 Roll: <span class="extra"> </span></div>
                         </div>
                         <div class="row">
@@ -159,12 +159,12 @@
                     <div class="card-header"><h5 class="card-title">Ask the Oracle</h5></div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm-6 col-lg-3">
+                            <div class="col col-lg-3">
                                 <form method="GET" action="/oracle">
-                                    <button class="decide" name="ask" type="button">Ask the Oracle</button>
+                                    <button class="decide" name="ask" type="button">Ask</button>
                                 </form>
                             </div>
-                            <div class="col-sm col-lg-9 answer">
+                            <div class="col col-lg-9 answer">
                                 <span class="label"> </span>
                                 <span class="value"> </span>
                             </div>
@@ -186,13 +186,13 @@
                     <div class="card-header"><h5 class="card-title">Percent Likely</h5></div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm col-lg-3">
+                            <div class="col col-lg-3">
                                 <form method="GET" action="/likely">
                                     <label for="percent">Percent:</label> <input id="percent" name="percent" type="number" min="1" max="99" value="50"/><br />
                                     <button class="decide" name="guess" type="button">Guess</button>
                                 </form>
                             </div>
-                            <div class="col-sm col-lg-9 answer"><span class="value"> </span></div>
+                            <div class="col col-lg-9 answer"><span class="value"> </span></div>
                         </div>
                         <div class="row">
                             <div class="col-12">
@@ -211,14 +211,14 @@
                     <div class="card-header"><h5 class="card-title">Pick a Number</h5></div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm col-md-3">
+                            <div class="col col-md-3">
                                 <form method="GET" action="/pick">
                                     <label for="low">Low:</label> <input id="low" name="low" type="number" value="1"/><br />
                                     <label for="high">High:</label> <input id="high" name="high" type="number" value="10"/><br />
                                     <button class="decide" name="pick" type="button">Pick</button>
                                 </form>
                             </div>
-                            <div class="col-sm col-md-9 answer"><span class="value"> </span></div>
+                            <div class="col col-md-9 answer"><span class="value"> </span></div>
                         </div>
                         <div class="row">
                             <div class="col-12">
@@ -237,14 +237,14 @@
                     <div class="card-header"><h5 class="card-title">Select a String</h5></div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm col-lg-3">
+                            <div class="col col-lg-3">
                                 <form method="GET" action="/select">
                                     <label for="strings">Strings, one per line:</label><br />
                                     <textarea cols="30" rows="5" id="strings" name="string"></textarea><br />
                                     <button class="decide" name="select" type="button">Select</button>
                                 </form>
                             </div>
-                            <div class="col-sm col-lg-9 answer"><span class="value"> </span></div>
+                            <div class="col col-lg-9 answer"><span class="value"> </span></div>
                         </div>
                         <div class="row">
                             <div class="col-12">
@@ -288,11 +288,16 @@ function make_decision(id, data) {
         else
         {
             $("#error").hide();
-            $(id + " .answer").show();
-            for(fld in json)
-            {
-                $(id + " ." + fld).text( json[fld] );
-            }
+            $(id + " .answer").fadeOut(400);
+            $(id + " .answer").fadeIn({
+                duration: 400,
+                start: function() {
+                    for(fld in json)
+                    {
+                        $(id + " ." + fld).text( json[fld] );
+                    }
+                },
+            });
         }
     })
     .fail(function(xhr, status, errorThrown) {
@@ -302,6 +307,11 @@ function make_decision(id, data) {
         $("#error").show();
     })
 }
+$(document).on("keypress", ":input:not(textarea)", function(event) {
+    if (event.keyCode == 13) {
+        event.preventDefault();
+    }
+});
 $( document ).ready(function() {
     $("#error").hide();
     $(".answer").hide();
