--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -51,6 +51,12 @@
         width: 48px;
         height: 48px;
     }
+    input[type=number] {
+        width: 8rem;
+    }
+    #percent {
+        width: 3rem;
+    }
 </style>
 </head>
 <body>
