Better formatting on header

--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -57,16 +57,20 @@
     #percent {
         width: 3rem;
     }
+    .header h2 {
+        padding-left: 50%;
+        padding-right: 50%;
+    }
 </style>
 </head>
 <body>
 <div class="container-fluid">
-    <div class="header text-primary mb-4">
+    <div class="header text-primary mb-4 mt-3">
         <h2>QuikDecision</h2>
     </div>
     <div id="error" class="alert alert-danger">Error: <span class="msg"> </span></div>
     <div class="row no-gutters">
-        <div class="offset-1 col-2">
+        <div class="offset-1 col-1">
             <ul class="tab-ctrl float-right">
             <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseCoin" aria-expanded="true" aria-controls="collapseCoin">
                 <img src="/static/noun_Coins_1485554.svg" class="button-img" alt="Flip a Coin"/>
