--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -102,7 +102,7 @@
             <div id="collapseCoin" class="collapse show" data-parent="#deciders">
                 <div id="coin" class="card">
                     <div class="card-header">
-                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="collapse" data-target="#coinHelp">?</button>
+                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#coinHelp">?</button>
                         <h5 class="card-title">Flip a Coin</h5>
                     </div>
                     <div class="card-body">
@@ -114,20 +114,13 @@
                             </div>
                             <div class="col col-lg-9 answer"> <span class="value"> </span> </div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                            <div id="coinHelp" class="collapse help">
-                                Returns one of the two strings <em>Heads</em> or <em>Tails</em>. There is an equal probability of returning either one.
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div id="collapseDice" class="collapse" data-parent="#deciders">
                 <div id="dice" class="card">
                     <div class="card-header">
-                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="collapse" data-target="#diceHelp">?</button>
+                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#diceHelp">?</button>
                         <h5 class="card-title">Roll the Dice</h5>
                     </div>
                     <div class="card-body">
@@ -143,38 +136,13 @@
                             <div class="col col-lg-9 answer">Value: <span class="value"> </span><br />
                                 Roll: <span class="extra"> </span></div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                            <div id="diceHelp" class="collapse help">
-                                <p>Roll the described combination of dice, returning a number and description of the
-                                roll. The <em>dice expr</em> is a combination of terms of one of three forms joined by <code>+</code>:</p>
-                                <ul>
-                                    <li>{n}d{s}: roll n s-sided dice (3d6)</li>
-                                    <li>{n}x{s}: roll n s-sided exploding dice (2x8)</li>
-                                    <li>{n}: an increment.</li>
-                                </ul>
-                                <p>The number of sides supported are 4, 6, 8, 10, 12, 20, or 100. Exploding dice
-            work much like normal, except when a die rolls the maximum value for the die,
-            then it is re-rolled to generate a value to add to the original roll. This may
-            happen more than once.</p>
-                                <p>The return is the sum of all of the rolls followed by a string representing the
-                                individual rolls.</p>
-                            <p>Normal dice are represented by the expression, followed by the results of the
-                            individual die rolls in parens: <code>3d6(3+5+1)</code>.</p>
-                            <p>Exploding dice are represented by the dice expression followed by an expression
-            in angle brackets. The expression is made of the results of each individual die
-            in parens, with any die that exploded being followed by an <code>!</code>, and the re-roll
-            added as needed: <code>3x6&lt;(1)+(6!+5)+(2)&gt;</code>.</p>
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div id="collapseOracle" class="collapse" data-parent="#deciders">
                 <div id="oracle" class="card">
                     <div class="card-header">
-                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="collapse" data-target="#oracleHelp">?</button>
+                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#oracleHelp">?</button>
                         <h5 class="card-title">Ask the Oracle</h5>
                     </div>
                     <div class="card-body">
@@ -189,21 +157,13 @@
                                 <span class="value"> </span>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                            <div id="oracleHelp" class="collapse help">
-                                This command returns a string randomly selected from the Oracle's set of
-            9 positive answers, 9 negative answers, or 6 indeterminate answers.
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div id="collapseLikely" class="collapse" data-parent="#deciders">
                 <div id="likely" class="card">
                     <div class="card-header">
-                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="collapse" data-target="#likelyHelp">?</button>
+                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#likelyHelp">?</button>
                         <h5 class="card-title">Percent True</h5>
                     </div>
                     <div class="card-body">
@@ -216,21 +176,13 @@
                             </div>
                             <div class="col col-lg-9 answer"><span class="value"> </span></div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                            <div id="likelyHelp" class="collapse help">
-                                Treats the supplied integer as a percentage and returns <code>true</code>
-                                that percent of the time. Otherwise, return <code>false</code>.
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div id="collapsePick" class="collapse" data-parent="#deciders">
                 <div id="pick" class="card">
                     <div class="card-header">
-                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="collapse" data-target="#pickHelp">?</button>
+                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#pickHelp">?</button>
                         <h5 class="card-title">Pick a Number</h5>
                     </div>
                     <div class="card-body">
@@ -244,21 +196,13 @@
                             </div>
                             <div class="col col-md-9 answer"><span class="value"> </span></div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                            <div id="pickHelp" class="collapse help">
-                                Selects a number between two supplied integers (inclusive) with equal probability.
-            The two numbers cannot be the same.
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div id="collapseSelect" class="collapse" data-parent="#deciders">
                 <div id="select" class="card">
                     <div class="card-header">
-                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="collapse" data-target="#selectHelp">?</button>
+                        <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#selectHelp">?</button>
                         <h5 class="card-title">Select a String</h5>
                     </div>
                     <div class="card-body">
@@ -273,19 +217,111 @@
                             </div>
                             <div class="col col-lg-9 answer"><span class="value"> </span></div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                            <div id="selectHelp" class="collapse help">
-                                Selects one of the supplied strings with equal probability. There must be
-            at least two strings to choose between. The strings should be entered one per line.
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div> <!-- deciders -->
     </div> <!-- row -->
+<!-- Modals -->
+<div class="modal fade" id="coinHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+            Returns one of the two strings <em>Heads</em> or <em>Tails</em>. There is an equal probability of returning either one.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="diceHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+            <p>Roll the described combination of dice, returning a number and description of the
+            roll. The <em>dice expr</em> is a combination of terms of one of three forms joined by <code>+</code>:</p>
+            <ul>
+                <li>{n}d{s}: roll n s-sided dice (3d6)</li>
+                <li>{n}x{s}: roll n s-sided exploding dice (2x8)</li>
+                <li>{n}: an increment.</li>
+            </ul>
+            <p>The number of sides supported are 4, 6, 8, 10, 12, 20, or 100. Exploding dice
+            work much like normal, except when a die rolls the maximum value for the die,
+            then it is re-rolled to generate a value to add to the original roll. This may
+            happen more than once.</p>
+            <p>The <em>Value</em> is the sum of all of the rolls. The <em>Roll</em> is a string representing the
+            individual rolls.</p>
+            <p>Normal dice are represented by the expression, followed by the results of the
+            individual die rolls in parens: <code>3d6(3+5+1)</code>.</p>
+            <p>Exploding dice are represented by the dice expression followed by an expression
+            in angle brackets. The expression is made of the results of each individual die
+            in parens, with any die that exploded being followed by an <code>!</code>, and the re-roll
+            added as needed: <code>3x6&lt;(1)+(6!+5)+(2)&gt;</code>.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="oracleHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+            This command returns a string randomly selected from the Oracle's set of
+            9 positive answers, 9 negative answers, or 6 indeterminate answers.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="likelyHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+            Treats the supplied integer as a percentage and returns <code>true</code>
+            that percent of the time. Otherwise, return <code>false</code>.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="pickHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+            Selects a number between two supplied integers (inclusive) with equal probability.
+            The two numbers cannot be the same.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="selectHelp" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+            Selects one of the supplied strings with equal probability. There must be
+            at least two strings to choose between. The strings should be entered one per line.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div> <!-- container -->
 <footer id="colophon" role="contentinfo" class="fixed-bottom ml-5 mb-3>
     <div class="site-info">
