--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -57,18 +57,21 @@
     #percent {
         width: 3rem;
     }
-    .header h2 {
-        padding-left: 50%;
-        padding-right: 50%;
+    .header h2 span {  /* to center heading */
+        display: block;
+        width: 12rem;
+    }
+    .errmsg .alert {
+        margin-top: 1rem;
+        margin-bottom: 0;
     }
 </style>
 </head>
 <body>
 <div class="container-fluid">
     <div class="header text-primary mb-4 mt-3">
-        <h2>QuikDecision</h2>
+        <h2><span class="mx-auto">QuikDecision</span></h2>
     </div>
-    <div id="error" class="alert alert-danger">Error: <span class="msg"> </span></div>
     <div class="row no-gutters">
         <div class="offset-1 col-1">
             <ul class="tab-ctrl float-right">
@@ -136,6 +139,9 @@
                             <div class="col col-lg-9 answer">Value: <span class="value"> </span><br />
                                 Roll: <span class="extra"> </span></div>
                         </div>
+                        <div id="diceError" class="row errmsg">
+                            <div class="col alert alert-danger">Error: <span class="msg"> </span></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -176,6 +182,9 @@
                             </div>
                             <div class="col col-lg-9 answer"><span class="value"> </span></div>
                         </div>
+                        <div id="likelyError" class="row errmsg">
+                            <div class="col alert alert-danger">Error: <span class="msg"> </span></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -187,14 +196,17 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col col-md-3">
+                            <div class="col col-lg-3">
                                 <form method="GET" action="/pick">
                                     <label for="low">Low:</label> <input id="low" name="low" type="number" value="1"/><br />
                                     <label for="high">High:</label> <input id="high" name="high" type="number" value="10"/><br />
                                     <button class="decide btn btn-outline-primary btn-sm" name="pick" type="button">Pick</button>
                                 </form>
                             </div>
-                            <div class="col col-md-9 answer"><span class="value"> </span></div>
+                            <div class="col col-lg-9 answer"><span class="value"> </span></div>
+                        </div>
+                        <div id="pickError" class="row errmsg">
+                            <div class="col alert alert-danger">Error: <span class="msg"> </span></div>
                         </div>
                     </div>
                 </div>
@@ -210,12 +222,15 @@
                             <div class="col col-lg-3">
                                 <form method="GET" action="/select">
                                     <label for="strings">Choose from:</label><br />
-                                    <textarea cols="30" rows="5" id="strings" name="string"
+                                    <textarea cols="30" rows="5" id="strings" name="strings"
                                         placeholder="One string per line"></textarea><br />
                                     <button class="decide btn btn-outline-primary btn-sm" name="select" type="button">Select</button>
                                 </form>
                             </div>
                             <div class="col col-lg-9 answer"><span class="value"> </span></div>
+                        </div>
+                        <div id="selectError" class="row errmsg">
+                            <div class="col alert alert-danger">Error: <span class="msg"> </span></div>
                         </div>
                     </div>
                 </div>
@@ -344,12 +359,12 @@ function make_decision(id, data) {
     .done(function(json) {
         if(json.error)
         {
-            $("#error").show();
-            $("#error .msg").text(json.error);
+            $(id + "Error").show();
+            $(id + "Error .msg").text(json.error);
         }
         else
         {
-            $("#error").hide();
+            $(id + "Error").hide();
             $(id + " .answer").fadeOut(400);
             $(id + " .answer").fadeIn({
                 duration: 400,
@@ -375,7 +390,7 @@ $(document).on("keypress", ":input:not(textarea)", function(event) {
     }
 });
 $( document ).ready(function() {
-    $("#error").hide();
+    $(".errmsg").hide();
     $(".answer").hide();
     $("#coin button.decide").click(function(event) {
         make_decision("#coin", {});
