Fix aria attributes

--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -79,23 +79,23 @@
                 <img src="/static/noun_Coins_1485554.svg" class="button-img" alt="Flip a Coin"/>
                 <span class="button-text">Flip a Coin</span>
             </button></li>
-            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseDice" aria-expanded="true" aria-controls="collapseDice">
+            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseDice" aria-expanded="false" aria-controls="collapseDice">
                 <img src="/static/noun_Dice_1765632.svg" class="button-img" alt="Roll the Dice"/>
                 <span class="button-text">Roll the Dice</span>
             </button></li>
-            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseOracle" aria-expanded="true" aria-controls="collapseOracle">
+            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseOracle" aria-expanded="false" aria-controls="collapseOracle">
                 <img src="/static/noun_oracle_139375.svg" class="button-img" alt="Ask the Oracle"/>
                 <span class="button-text">Ask the Oracle</span>
             </button></li>
-            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseLikely" aria-expanded="true" aria-controls="collapseLikely">
+            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseLikely" aria-expanded="false" aria-controls="collapseLikely">
                 <img src="/static/noun_Percent_625396.svg" class="button-img" alt="Percent True"/>
                 <span class="button-text">Percent True</span>
             </button></li>
-            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapsePick" aria-expanded="true" aria-controls="collapsePick">
+            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapsePick" aria-expanded="false" aria-controls="collapsePick">
                 <img src="/static/noun_Number_1576875.svg" class="button-img" alt="Pick a Number"/>
                 <span class="button-text">Pick a Number</span>
             </button></li>
-            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseSelect" aria-expanded="true" aria-controls="collapseSelect">
+            <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseSelect" aria-expanded="false" aria-controls="collapseSelect">
                 <img src="/static/noun_text_957716.svg" class="button-img" alt="Select a String"/>
                 <span class="button-text">Select a String</span>
             </button></li>
