Add support for d3

--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -88,8 +88,8 @@
                 <span class="button-text">Ask the Oracle</span>
             </button></li>
             <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapseLikely" aria-expanded="false" aria-controls="collapseLikely">
-                <img src="/static/noun_Percent_625396.svg" class="button-img" alt="Percent True"/>
-                <span class="button-text">Percent True</span>
+                <img src="/static/noun_Percent_625396.svg" class="button-img" alt="Likelihood"/>
+                <span class="button-text">Likelihood</span>
             </button></li>
             <li><button class="btn float-right btn-outline-info" type="button" data-toggle="collapse" data-target="#collapsePick" aria-expanded="false" aria-controls="collapsePick">
                 <img src="/static/noun_Number_1576875.svg" class="button-img" alt="Pick a Number"/>
@@ -170,7 +170,7 @@
                 <div id="likely" class="card">
                     <div class="card-header">
                         <button class="btn float-right btn-outline-secondary btn-sm" data-toggle="modal" data-target="#likelyHelp">?</button>
-                        <h5 class="card-title">Percent True</h5>
+                        <h5 class="card-title">Likelihood</h5>
                     </div>
                     <div class="card-body">
                         <div class="row">
