Rename percent likely item.
- Likelihood is more useful.
- Some cleanup

--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -175,7 +175,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col col-lg-3">
-                                <form method="GET" action="/likely">
+                                <form method="GET" action="/likelihood">
                                     <label for="percent">True <input id="percent" name="percent" type="number" min="1" max="99" value="50"/>
                                         percent of the time</label><br />
                                     <button class="decide btn btn-outline-primary btn-sm" name="guess" type="button">Guess</button>
