--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -341,8 +341,11 @@
 </div> <!-- container -->
 <footer id="colophon" role="contentinfo" class="fixed-bottom ml-5 mb-3>
     <div class="site-info">
-        <div class="footercopy">Copyright 2018, G. Wade Johnson. Licensed under Creative Commons Attribution License 2.5.</div>
-        <!--    <div class="footercredit"><a href="/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></div> -->
+        <div class="footercopy">Copyright 2018, G. Wade Johnson. Licensed under Creative Commons Attribution License 2.5.
+        <span class="footercredit ml-4"><a href="/static/attributions.html" target="_blank" rel="noopener">Attributions</a></span>
+        <span class="footercredit ml-4"><a href="/static/privacy.html" target="_blank" rel="noopener">Privacy Policy</a></span>
+        </div>
+
         <div class="clear"></div>
     </div><!-- .site-info -->
 </footer>
